user-skel/ansible_collections/ace_box/ace_box/roles/backstage/files/ace-box-backstage/k8s/base/postgres-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: backstage
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
