user-skel/ansible_collections/ace_box/ace_box/roles/backstage/files/ace-box-backstage/k8s/base/backstage-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "ingress_class"
  name: backstage
  namespace: backstage
spec:
  rules:
  - host: "backstage.ingress_domain"
    http:
      paths:
      - backend:
          service:
            name: backstage
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
